feature: add pom.xml

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,43 @@
 # Compiled class file
 *.class
+target/
+crhttp/
+testhttp/
+.bak/
+**/*.env
+**/target/
+
+.wolf
+.lingma
 
 # Log file
 *.log
 
+# ide
+.idea/
+*.lst
+*.iml
+.DS_Store
+*.classpath
+*.project
+*.settings
+*.factorypath
+.vscode/
+*.ipr
+*.iws
 # BlueJ files
 *.ctxt
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+#cert
+*.jks
+*.crt
+
+
 # Package Files #
+
 *.jar
 *.war
 *.nar
@@ -19,6 +46,14 @@
 *.tar.gz
 *.rar
 
+# rebel #
+**/rebel.xml
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-replay_pid*
+dump.rdb
+application-local.yml
+#profiles
+
+
+
